# CD13652-Project

./: .gitignore  pyproject.toml  rubric.txt
Exercises/: Housing_Modified_2.csv
Project/: project_starter.ipynb  readme.md
